# mpl-nonblock

./: .gitignore  README.md  mpl-nonblock.sublime-project  pyproject.toml
examples/: Makefile  animated_sine_demo.py  backend_switch_probe.py  demo.py  high_fps_two_windows.py  hold_windows_demo.py  matplotlib_native_mwe.py  minimal_example_demo.py  simple_animated_sine_demo.py  visual_subplots_test.py
release-notes/: v1.2.0.md  v1.2.1.md
skills/matplotlib-window-tracker/: SKILL.md
skills/mpl-nonblock/: SKILL.md
src/matplotlib_window_tracker/: __init__.py  _helpers.py  backends.py
src/mpl_nonblock/: __init__.py  _helpers.py  backends.py  core.py  demos.py  diagnose.py  terminal.py
tests/: test_hold_windows.py  test_is_gui_backend.py  test_raise_window.py  test_recommended_backend.py  test_show.py  test_two_figures_sin_cos.py
