[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mpl-nonblock"
version = "1.0.0"
description = "Nonblocking Matplotlib helpers for interactive IPython workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Andrea Alberti" }]
dependencies = [
  "matplotlib>=3.5",
]

[project.optional-dependencies]
qt = [
  "PySide6>=6.5",
]
test = [
  "pytest>=7",
]

[project.scripts]
mpl-nonblock-diagnose = "mpl_nonblock.diagnose:main"
mpl-nonblock-two-windows = "mpl_nonblock.demos:two_windows_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/mpl_nonblock"]
