[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mpl-nonblock"
version = "1.1.0"
description = "Nonblocking Matplotlib helpers for interactive IPython workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Andrea Alberti" }]
dependencies = [
  "matplotlib>=3.5",
]

[project.optional-dependencies]
qt = [
  "PySide6>=6.5",
]
test = [
  "pytest>=7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/mpl_nonblock"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = [
  "src/mpl_nonblock",
  "pyproject.toml",
  "README.md",
  "LICENSE",
]
exclude = [
  "bin/",
  "examples/",
  "tests/",
  "skills/",
  ".github/",
  ".venv/",
  "tests.py",
  ".DS_Store",
]
